fixed content overflow on contactlist

--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -24,7 +24,7 @@ html {
   top: 96px;
   left: 15.4%;
   width: 25%;
-  height: 100vh;
+  height: 90vh;
   background-color: #ffffff;
   box-shadow: 4px 0 6px 0 rgba(0, 0, 0, 0.08);
   display: flex;
